v1.1.7.?
- xxmString: TStringContext.SaveToFile respects AutoEncoding parameter
- xxm.xml update on project failing to load is read automatically (needed a restart before)
- 'embed HTML syntax': now supports start characters e.g. <p>>=i<</p> instead of <p>[[=i]]</p>

v1.1.6.288
- security: EOL's in added header fields are disallowed
- fixed issue with URLEncoded and UTF8 encoded characters
- fixed issue when setting BufferSize from non-zero to zero	
- renamed xxmApache to xxmAhttpd, Apache httpd license states non-ASF projects may not use the Apache name
- xxmProject: register with xxm.xml
- xxmIsapi: override default buffering of IIS7 (remember to set Context.BufferSize!)
- xxm.xml supports relative paths in <ModulePath>
- Delphi XE2 support (as well as continued Delphi 7 support with the same source)

v1.1.5.285
- xxmHSYS: HTTPAPI handler
- bug fixed: parameters were parsed from request body multiple times
- when BufferSize is set, contexts keep buffers to save on allocating and releasing memory

v1.1.4.284
- upload progress monitoring interface
- new IXxmContext members: BufferSize, Flush
- optional project interface to handle exceptions: IXxmProjectEvents

v1.1.3.282
- exception handling: error message detects ContentType text/plain
- redirect responses set Content-Length to keep connection
- open code block at end allowed
- xxmHttp LoadCopy parameter/setting (set LoadCopy=0 when debugging with xxmHttp as host application)
- send 204 response when no content
- xxmGecko: support for FireFox 8, revised data ready reporting
- cross-project includes with Context.Include('xxm://a/b') when AllowInclude=1 in project registry (default disabled)

v1.1.2.280
- revised auto-build/auto-update: global mutex instead of local critical section
- xxmProject: <CompileCommand> may contain [[HandlerPath]] to correctly include public units out of the box
- xxmIsapi: support for multi-process hosting (multiple w3wp.exe instances)
- xxmLocal: fixed ContextString(csUserAgent)