@@ -45,9 +45,6 @@ type
     function GetSessionID:WideString; override;
     procedure SendHeader; override;
     function GetCookie(Name:WideString):WideString; override;
-    procedure SetCookie(Name,Value:WideString); overload; override;
-    procedure SetCookie(Name,Value:WideString; KeepSeconds:cardinal;
-      Comment,Domain,Path:WideString; Secure,HttpOnly:boolean); overload; override;
     procedure SetBufferSize(ABufferSize: Integer); override;
     procedure Flush; override;
 
@@ -316,43 +313,6 @@ begin
   Result:=GetParamValue(FCookie,FCookieIdx,Name);
 end;
 
-procedure TXxmHostedContext.SetCookie(Name, Value: WideString);
-begin
-  CheckHeaderNotSent;
-  //check name?
-  //TODO: "quoted string"?
-  FResHeaders['Cache-Control']:='no-cache="set-cookie"';
-  FResHeaders.Add('Set-Cookie',Name+'="'+Value+'"');
-end;
-
-procedure TXxmHostedContext.SetCookie(Name, Value: WideString;
-  KeepSeconds: cardinal; Comment, Domain, Path: WideString; Secure,
-  HttpOnly: boolean);
-var
-  x:WideString;
-begin
-  CheckHeaderNotSent;
-  //check name?
-  //TODO: "quoted string"?
-  FResHeaders['Cache-Control']:='no-cache="set-cookie"';
-  x:=Name+'="'+Value+'"';
-  //'; Version=1';
-  if Comment<>'' then
-    x:=x+'; Comment="'+Comment+'"';
-  if Domain<>'' then
-    x:=x+'; Domain="'+Domain+'"';
-  if Path<>'' then
-    x:=x+'; Path="'+Path+'"';
-  x:=x+'; Max-Age='+IntToStr(KeepSeconds)+
-    '; Expires="'+RFC822DateGMT(Now+KeepSeconds/86400)+'"';
-  if Secure then
-    x:=x+'; Secure'+#13#10;
-  if HttpOnly then
-    x:=x+'; HttpOnly'+#13#10;
-  FResHeaders.Add('Set-Cookie',x);
-  //TODO: Set-Cookie2
-end;
-
 function TXxmHostedContext.GetSessionID: WideString;
 const
   SessionCookie='xxmSessionID';
@@ -512,7 +472,13 @@ end;
 procedure TXxmHostedContext.AddResponseHeader(Name, Value: WideString);
 begin
   //inherited;?
-  FResHeaders[Name]:=Value;
+  if SettingCookie then
+   begin
+    SettingCookie:=false;
+    FResHeaders.Add(Name,Value);
+   end
+  else
+    FResHeaders[Name]:=Value;
 end;
 
 procedure TXxmHostedContext.Flush;
