@@ -55,9 +55,6 @@ type
     function GetSessionID:WideString; override;
     procedure SendHeader; override;
     function GetCookie(Name:WideString):WideString; override;
-    procedure SetCookie(Name,Value:WideString); overload; override;
-    procedure SetCookie(Name,Value:WideString; KeepSeconds:cardinal;
-      Comment,Domain,Path:WideString; Secure,HttpOnly:boolean); overload; override;
     procedure SetBufferSize(ABufferSize: Integer); override;
     procedure Flush; override;
 
@@ -293,43 +290,6 @@ begin
     FCookieParsed:=true;
    end;
   Result:=GetParamValue(FCookie,FCookieIdx,Name);
-end;
-
-procedure TXxmHSys1Context.SetCookie(Name, Value: WideString);
-begin
-  CheckHeaderNotSent;
-  //check name?
-  //TODO: "quoted string"?
-  SetResponseHeader(HttpHeaderCacheControl,'no-cache="set-cookie"');
-  SetResponseHeader(HttpHeaderSetCookie,Name+'="'+Value+'"');
-end;
-
-procedure TXxmHSys1Context.SetCookie(Name, Value: WideString;
-  KeepSeconds: cardinal; Comment, Domain, Path: WideString; Secure,
-  HttpOnly: boolean);
-var
-  x:WideString;
-begin
-  CheckHeaderNotSent;
-  //check name?
-  //TODO: "quoted string"?
-  SetResponseHeader(HttpHeaderCacheControl,'no-cache="set-cookie"');
-  x:=Name+'="'+Value+'"';
-  //'; Version=1';
-  if Comment<>'' then
-    x:=x+'; Comment="'+Comment+'"';
-  if Domain<>'' then
-    x:=x+'; Domain="'+Domain+'"';
-  if Path<>'' then
-    x:=x+'; Path="'+Path+'"';
-  x:=x+'; Max-Age='+IntToStr(KeepSeconds)+
-    '; Expires="'+RFC822DateGMT(Now+KeepSeconds/86400)+'"';
-  if Secure then
-    x:=x+'; Secure'+#13#10;
-  if HttpOnly then
-    x:=x+'; HttpOnly'+#13#10;
-  SetResponseHeader(HttpHeaderSetCookie,x);
-  //TODO: Set-Cookie2
 end;
 
 function TXxmHSys1Context.GetSessionID: WideString;
@@ -601,6 +561,7 @@ end;
 procedure TXxmHSys1Context.SetResponseHeader(id: THTTP_HEADER_ID;
   Value: AnsiString);
 begin
+  //TODO: SettingCookie allow multiples
   CacheString(Value,
     FRes.Headers.KnownHeaders[id].RawValueLength,
     FRes.Headers.KnownHeaders[id].pRawValue);
