@@ -30,9 +30,6 @@ type
     function Connected: Boolean; override;
     procedure Redirect(RedirectURL: WideString; Relative:boolean); override;
     function GetCookie(Name: WideString): WideString; override;
-    procedure SetCookie(Name: WideString; Value: WideString); overload; override;
-    procedure SetCookie(Name,Value:WideString; KeepSeconds:cardinal;
-      Comment,Domain,Path:WideString; Secure,HttpOnly:boolean); overload; override;
     procedure SetBufferSize(ABufferSize: integer); override;
     procedure Flush; override;
 
@@ -567,43 +564,6 @@ begin
   Result:=GetParamValue(FCookie,FCookieIdx,Name);
 end;
 
-procedure TXxmIsapiContext.SetCookie(Name, Value: WideString);
-begin
-  CheckHeaderNotSent;
-  //check name?
-  //TODO: "quoted string"?
-  FResHeaders['Cache-Control']:='no-cache="set-cookie"';
-  FResHeaders.Add('Set-Cookie',Name+'="'+Value+'"');
-end;
-
-procedure TXxmIsapiContext.SetCookie(Name,Value:WideString;
-  KeepSeconds:cardinal; Comment,Domain,Path:WideString;
-  Secure,HttpOnly:boolean);
-var
-  x:WideString;
-begin
-  CheckHeaderNotSent;
-  //check name?
-  //TODO: "quoted string"?
-  FResHeaders['Cache-Control']:='no-cache="set-cookie"';
-  x:=Name+'="'+Value+'"';
-  //'; Version=1';
-  if Comment<>'' then
-    x:=x+'; Comment="'+Comment+'"';
-  if Domain<>'' then
-    x:=x+'; Domain="'+Domain+'"';
-  if Path<>'' then
-    x:=x+'; Path="'+Path+'"';
-  x:=x+'; Max-Age='+IntToStr(KeepSeconds)+
-    '; Expires="'+RFC822DateGMT(Now+KeepSeconds/86400)+'"';
-  if Secure then
-    x:=x+'; Secure'+#13#10;
-  if HttpOnly then
-    x:=x+'; HttpOnly'+#13#10;
-  FResHeaders.Add('Set-Cookie',x);
-  //TODO: Set-Cookie2
-end;
-
 function TXxmIsapiContext.GetSessionID: WideString;
 const
   SessionCookie='xxmSessionID';
@@ -637,7 +597,13 @@ end;
 
 procedure TXxmIsapiContext.AddResponseHeader(Name, Value: WideString);
 begin
-  FResHeaders[Name]:=Value;
+  if SettingCookie then
+   begin
+    SettingCookie:=false;
+    FResHeaders.Add(Name,Value);
+   end
+  else
+    FResHeaders[Name]:=Value;
 end;
 
 procedure TXxmIsapiContext.Flush;
