@@ -2,6 +2,7 @@ v1.1.7.?
 - xxmString: TStringContext.SaveToFile respects AutoEncoding parameter
 - xxm.xml update on project failing to load is read automatically (needed a restart before)
 - 'embed HTML syntax': now supports start characters e.g. <p>>=i<</p> instead of <p>[[=i]]</p>
+- xxmProject include unit files dialog supports multi-select
 
 v1.1.6.288
 - security: EOL's in added header fields are disallowed
